--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900&display=swap);
 
 :root {
   --vt-c-white: #d3d3d3;
