--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -35,6 +35,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  user-select: none;
 }
 
 html {
